@@ -2314,11 +2314,20 @@ regain its strength at a rate of 1 point every 5 minutes or so.
 PROP_PROPSETTER=\
 Property   : Prop_PropSetter\n\r\
 Targets    : All\n\r\
-Parameters : STAT="VALUE"\n\r\
-Example    : \n\r\
+Parameters : TRIGGER=[TRIGTYPE] (BUBBLE=TRUE/FALSE) [STAT="VALUE"]\n\r\
+Example    : trigger=get bubble=false ammocapacity=10\n\r\
 Description: \n\r\
-This property is not yet tested or working.  Do not use it on anything you \
-care about.
+This property changes the settable fields on  the affected object, or \
+an items owner if bubble=true.  The change occurs on the trigger, and \
+is undone on an opposing event, if the trigger has one.  The supported \
+triggers are: ALWAYS, ENTER, BEING_HIT, WEAR_WIELD, GET, USE, PUT ,\
+MOUNT, DROP_PUTIN, HITTING_WITH.  The stats you can discover by using \
+LIST STATS [CLASSNAME].  \n\r\
+Now the warnings: Most fields can be temporarily and conditionally \
+adjusted safely using the various Prop_*Adjuster properties.  This \
+property makes permanent savable changes, similar to MPGSET in a script. \
+It *might* also be able to safely undo a change, making it seem temporary, but \
+its best to use this as a last resort, and to test it first.
 
 PROP_STATADJUSTER=\
 Property   : Prop_StatAdjuster\n\r\
